--- a/index.html
+++ b/index.html
@@ -180,17 +180,17 @@
         </section>
         <section class="stock">
             <div class="eth">
-                <img src="./images/icon-ethereum.svg">
+                <img src="./images/icon-ethereum.svg" alt="price">
                 <p>0.041 ETH</p>
             </div>
             <div class="timeleft">
-                <img src="./images/icon-clock.svg">
+                <img src="./images/icon-clock.svg" alt="timeleft">
                 <p>3 days left</p>
             </div>
         </section>
             <hr>
         <section class="avatar">
-            <img src="./images/image-avatar.png">
+            <img src="./images/image-avatar.png" alt="avatar">
             <p>Creation of <span class="owner">Jules Wyvern</span></p>
         </section>
     </main>
